# FIN-AI-Auditor

./: .env.example  .gitignore  AGENTS Kopie.md  Makefile  PLAN.md  README.md  dev.sh  pyproject.toml  start.sh  stop.sh
data/metamodel/: current_dump.json
docs/: README.md  architecture.md  causal-graph-design.md  data-model.md  decision-packages-and-retrieval.md  delta-sync-and-resolution.md  forensic-finding-classes.md  forensic-readiness-plan.md  product-scope.md  production-readiness-runbook.md  roadmap.md  target-picture.md
scripts/: live_writeback_smoke.py
src/fin_ai_auditor/: __init__.py  config.py  main.py  runtime_logging.py
src/fin_ai_auditor/api/: app.py  dependencies.py
src/fin_ai_auditor/domain/: models.py
src/fin_ai_auditor/llm/: __init__.py  embeddings.py  interfaces.py  slot_resolver.py  types.py
src/fin_ai_auditor/worker/: main.py
tests/: __init__.py  forensic_reference_cases.py  forensic_reference_catalog.py  test_atlassian_auth.py  test_audit_repository.py  test_bsm_architecture_reference_cases.py  test_causal_graph_models.py  test_clarification_service.py  test_confluence_connector.py  test_confluence_writeback.py  test_context_builder.py  test_forensic_reference_cases.py  test_forensic_reference_catalog.py  test_gold_set_benchmark.py  test_health.py  test_jira_writeback.py  test_llm_config.py  test_pipeline_service.py  test_recommendation_engine.py  test_retrieval_and_claims.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  categoryLabels.ts  eventualPathMeta.ts  styles.css  types.ts
(+58 files in other folders)
