[project]
name = "fin-ai-auditor"
version = "0.1.0"
description = "Audit- und Governance-Tool fuer Soll/Ist-Drift zwischen FIN-AI Code, Doku und Metamodell."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "litellm>=1.74.0,<2.0.0",
  "neo4j>=5.28.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
fin-ai-auditor-api = "fin_ai_auditor.main:main"
fin-ai-auditor-worker = "fin_ai_auditor.worker.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["fin_ai_auditor*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
